--- a/train.yml
+++ b/train.yml
@@ -25,7 +25,7 @@ datasets:
 
 #### training settings: learning rate scheme, loss
 train:
-  optimizer: adam
+  optimizer: adamw
   min_lr: !!float 1e-8
   patience: 2
   factor: 0.5
